<resources>
    <string name="app_name">云海易购</string>
    <string name="home">首页</string>
    <string name="classification">分类</string>
    <string name="mall">线下商城</string>
    <string name="cart">购物车</string>
    <string name="my">我的</string>
    <string name="search_goods">搜索商品</string>
    <string name="brand_merchant">品牌商家</string>
    <string name="quality_trustworthy">品质值得信赖</string>
    <string name="see_more">查看更多</string>
    <string name="brand_selection">品牌精选</string>
    <string name="search_hint">搜索商品或商家</string>
    <string name="search">搜索</string>
    <string name="popular_searches">搜索历史</string>
    <string name="search_records">搜索发现</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods">商品</string>
    <string name="detail">详情</string>
    <string name="evaluation">评价</string>
    <string name="get_coupons">领券</string>
    <string name="get_coupons_center">领券中心</string>
    <string name="selected">已选</string>
    <string name="delivery">配送</string>
    <string name="product_review">商品评价</string>
    <string name="view_all">查看全部</string>
    <string name="offline_physical_merchants">线下实体商家</string>
    <string name="shopping_cart">购物车</string>
    <string name="shopping_cart_null">您的购物车中没任何商品</string>
    <string name="go_shopping">去逛逛</string>
    <string name="invitation_qr_code">邀请二维码</string>
    <string name="coupons">卡券</string>
    <string name="balance">余额</string>
    <string name="offline_points">线下积分</string>
    <string name="online_points">线上积分</string>
    <string name="my_order">我的订单</string>
    <string name="all_order">全部订单</string>
    <string name="pending_payment">待付款</string>
    <string name="return_after_sale">退换/售后</string>
    <string name="to_be_delivered">待发货</string>
    <string name="to_be_received">待收货</string>
    <string name="be_evaluated">待评价</string>
    <string name="my_service">我的服务</string>
    <string name="my_team">我的团队</string>
    <string name="my_card_voucher">我的卡券</string>
    <string name="address_management">地址管理</string>
    <string name="my_collection">我的收藏</string>
    <string name="notification">消息通知</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="feedback">意见反馈</string>
    <string name="common_problem">常见问题</string>
    <string name="merchant_settled">商家入驻</string>
    <string name="recruit">云网点招募</string>
    <string name="agent_recruitment">区域代理招募</string>
    <string name="board_committee">云董委招募</string>
    <string name="outside_chain">外链商家</string>
    <string name="buy_now">立即购买</string>
    <string name="only_left_until_the_end">距结束还剩</string>
    <string name="number">数量</string>
    <string name="determine">确定</string>
    <string name="add_cart">加入购物车</string>
    <string name="commodity_praise">商品好评度</string>
    <string name="spike_special">秒杀专场</string>
    <string name="go_panic_buying">去抢购</string>
    <string name="into_the_store">进店</string>
    <string name="business_details">商家详情</string>
    <string name="license_information">证照信息</string>
    <string name="contact_merchant">联系商家</string>
    <string name="navigation">导航</string>
    <string name="merchant_introduction">商家介绍</string>
    <string name="pay_merchant">向商家付款</string>
    <string name="confirm_payment">确认支付</string>
    <string name="actual_payment">实付款：</string>
    <string name="hint_payment_amount">请输入付款金额</string>
    <string name="offline_points_deduction">线下积分抵扣</string>
    <string name="select_payment">请选择支付方式</string>
    <string name="we_chat_pay">微信支付</string>
    <string name="checkout_counter">收银台</string>
    <string name="alipay">支付宝支付</string>
    <string name="balance_pay">余额支付</string>
    <string name="rmb">¥</string>
    <string name="cancel">取消</string>
    <string name="we_chat_friends">微信好友</string>
    <string name="circle_friends">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="link">复制链接</string>
    <string name="hint_call_phone">是否拨打商家电话？</string>
    <string name="back_to_homepage">返回首页</string>
    <string name="edit">编辑</string>
    <string name="discount_coupon">优惠券</string>
    <string name="all_benefits">全部收益</string>
    <string name="shopkeeper_center">店主中心</string>
    <string name="today_income">今日收入(元)</string>
    <string name="today_order">今日订单(单)</string>
    <string name="today_sales">今日销售额(元)</string>
    <string name="account_balance">账户余额</string>
    <string name="month_income">本月收入(元)</string>
    <string name="month_order">本月订单(单)</string>
    <string name="month_sales">本月销售额(元)</string>
    <string name="order_detail">订单详情</string>
    <string name="modify">修改</string>
    <string name="copy">复制</string>
    <string name="shipping">运费</string>
    <string name="payable">应付款：</string>
    <string name="new_address">新增地址</string>
    <string name="delivery_address">收货地址</string>
    <string name="default_address">默认地址</string>
    <string name="delete">删除</string>
    <string name="redact">编辑</string>
    <string name="address_tips">直送商品通过快递发货，将邮寄到您下单时选择的收货地址</string>
    <string name="add_shipping_address">新增收货地址</string>
    <string name="consignee">收货人</string>
    <string name="hint_consignee">请填写收货人的姓名</string>
    <string name="phone_number">手机号码</string>
    <string name="hint_phone_number">请填写收货人手机号码</string>
    <string name="city">所在城市</string>
    <string name="area">所在地区</string>
    <string name="detailed_address">详细地址</string>
    <string name="set_default_address">设为默认地址</string>
    <string name="save_address">保存地址</string>
    <string name="delete_address">删除地址</string>
    <string name="hint_city">请选择所在城市</string>
    <string name="hint_detail_address">街道、小区、楼牌号等详细信息</string>
    <string name="message_notification">消息通知</string>
    <string name="mall_activities">商城活动</string>
    <string name="transaction_notification">交易通知</string>
    <string name="latest_announcement">最新公告</string>
    <string name="logistics_notice">物流通知</string>
    <string name="post_review">发表评价</string>
    <string name="overview">综合评价</string>
    <string name="want_to_say">猜你想说</string>
    <string name="submit_review">提交评价</string>
    <string name="check_details">查看详情</string>
    <string name="check_order">查看订单</string>
    <string name="feedback_details_hint">请输入不少于10个字的描述&#8230;</string>
    <string name="submit">提交</string>
    <string name="question">请选择你要反馈的问题点：</string>
    <string name="all_selected">全选</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="hint_collection">确定要取消收藏这1种商品？</string>
    <string name="setting">设置</string>
    <string name="edit_information">编辑资料</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_app">关于云海易购APP</string>
    <string name="sign_out">退出登录</string>
    <string name="personal_information">个人信息</string>
    <string name="region">地区</string>
    <string name="not_set">未设置</string>
    <string name="birthday">生日</string>
    <string name="gender">性别</string>
    <string name="nick_name">昵称</string>
    <string name="avatar">头像</string>
    <string name="change_nickname">修改昵称</string>
    <string name="hint_nick_name">请输入昵称</string>
    <string name="nick_name_tips">4&#82112;0个字符，可由中英文、数字组成</string>
    <string name="account_security">账号安全</string>
    <string name="verified">实名认证</string>
    <string name="verified_tips">完成实名认证，尊享更多服务</string>
    <string name="modify_mobile">修改手机号码</string>
    <string name="modify_mobile_tips">若手机更换请尽快修改</string>
    <string name="set_payment_password">设置支付密码</string>
    <string name="payment_password_tips">用于购物支付验证以保护财产安全</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="modify_login_password_tips">建议您定期更改密码以保护账户安全</string>
    <string name="equipment_management">设备管理</string>
    <string name="equipment_management_tips">管理您近期登录过的设备记录</string>
    <string name="account_logout">账号注销</string>
    <string name="account_logout_tips">操作后账号信息无法恢复，谨慎操作</string>
    <string name="hint_mobile">请输入手机号</string>
    <string name="id_number">身份证号</string>
    <string name="hint_id_number">请输入15位或18位身份证号</string>
    <string name="verification_code">验证码</string>
    <string name="actual_name">真实姓名</string>
    <string name="hint_actual_name">请输入姓名</string>
    <string name="upload_id_photo">上传证件照</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="certification_center">实名认证中心</string>
    <string name="see_more_1"><![CDATA[查看更多 >]]></string>
    <string name="assure">个人隐私信息保障中</string>
    <string name="not_perfection">未完善</string>
    <string name="id_photo">证件照片</string>
    <string name="authenticate_now">立即认证</string>
    <string name="name">姓名</string>
    <string name="nationality">国籍（区域）</string>
    <string name="certificate_type">证件类型</string>
    <string name="card_validity">证件有效期</string>
    <string name="address">地址</string>
    <string name="occupation_category">职业类别</string>
    <string name="save">保存</string>
    <string name="replace">更换</string>
    <string name="change_mobile">更换手机号</string>
    <string name="please_certification">请完成以下认证</string>
    <string name="hint_auth_code">请输入短信验证码</string>
    <string name="next_step">下一步</string>
    <string name="bind_new_number">绑定新号码</string>
    <string name="sms_verification_code">短信验证码</string>
    <string name="change_payment_password">修改支付密码</string>
    <string name="payment_password">支付密码</string>
    <string name="change_six_payment_psw">修改6位数支付密码</string>
    <string name="forget_six_payment_psw">忘记6位数支付密码</string>
    <string name="please_set_six_pay_psw">请设置6位支付密码</string>
    <string name="please_enter_password_again">请再次输入密码</string>
    <string name="change_login_psw">修改登录密码</string>
    <string name="set_new_login_password">设置新的登录密码</string>
    <string name="current_equipment">当前设备</string>
    <string name="other_devices">其他设备</string>
    <string name="equipment_management_hint">该功能旨在保护账户信息安全，如有异常，请至账户安全修改登录密码</string>
    <string name="no_other_equipment">无其他设备</string>
    <string name="device_detail">设备详情</string>
    <string name="equipment_name">设备名称</string>
    <string name="equipment_type">设备类型</string>
    <string name="last_login_time">最后登录时间</string>
    <string name="modify_device_name">修改设备名</string>
    <string name="apply_cancellation">申请注销</string>
    <string name="logout_agree">申请注销即表示您自愿放弃账号内所有虚拟资产并 同意</string>
    <string name="account_cancellation_agreement">《账号注销协议》</string>
    <string name="merchant_settlement_agreement">《商家入驻协议》</string>
    <string name="confirm_logout">确认注销</string>
    <string name="give_up">放弃</string>
    <string name="rule">规则</string>
    <string name="points_available">可用积分</string>
    <string name="accumulated_points">累计积分:</string>
    <string name="exchange">兑换</string>
    <string name="points_usage_rule">积分使用规则说明</string>
    <string name="in_offline_businesses">我要入驻线下商家</string>
    <string name="in_online_businesses">我要入驻线上商家</string>
    <string name="hint_verification_code">请输入验证码</string>
    <string name="contact_person">联系人</string>
    <string name="hint_name">请输入姓名</string>
    <string name="store_name">店铺名称</string>
    <string name="store_type">店铺类型</string>
    <string name="flagship_store">旗舰店</string>
    <string name="specialty_store">专卖店</string>
    <string name="franchise_store">专营店</string>
    <string name="main_items">主营项目</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="account_password_login">帐号密码登录</string>
    <string name="hint_password">请输入密码</string>
    <string name="retrieve_password">忘记密码</string>
    <string name="mobile_verification_login">手机验证登录</string>
    <string name="other_login_methods">其他登录方式</string>
    <string name="privacy_policy">《云海易购用户协议》《隐私政策》</string>
    <string name="hint_input_psw">·避免使用连续或重复的数字，类似“123456”“112233”\n·避免使用手机号、证件号中的连续数字</string>
    <string name="about_name">云海易购</string>
    <string name="version_name">版本号：</string>
</resources>