<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.xdys.library.widget.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:left_drawable="@mipmap/arrow_left_b"
        app:show_left="true"
        app:show_right="true"
        app:title_content="@string/about_app"
        tools:layout_height="48dp" />

    <ImageView
        android:layout_width="86dp"
        android:layout_height="69dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65.5dp"
        android:src="@mipmap/app_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15.5dp"
        android:text="@string/about_name"
        android:textColor="@color/B99"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvVersionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/version_name"
        android:textColor="@color/B70"
        android:textSize="13sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <TextView
        android:id="@+id/tvPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/RE3"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:text="Copyright@2021-2021\n云海易购 版权所有"
        android:textColor="@color/B70"
        android:textSize="13sp" />
</LinearLayout>