<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.xdys.library.widget.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:left_drawable="@mipmap/arrow_left_b"
        app:show_left="true"
        app:show_right="true"
        app:title_content="@string/change_payment_password"
        tools:layout_height="48dp" />

    <TextView
        android:id="@+id/tvPleaseCertification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28.5dp"
        android:text="@string/please_certification"
        android:textColor="@color/B00"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBar" />


    <TextView
        android:id="@+id/tvInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28.5dp"
        android:textColor="@color/B00"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tvPleaseCertification"
        app:layout_constraintTop_toBottomOf="@id/tvPleaseCertification"
        tools:text="请输入187****8821收到的短信验证码" />

    <EditText
        android:id="@+id/etAuthCode"
        android:layout_width="180dp"
        android:layout_height="44dp"
        android:layout_marginTop="14dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/hint_auth_code"
        android:textColor="@color/BCC"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tvPleaseCertification"
        app:layout_constraintTop_toBottomOf="@id/tvInput" />

    <TextView
        android:id="@+id/btnGetVerificationCode"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/bg_r6"
        android:backgroundTint="@color/RFF"
        android:gravity="center"
        android:text="@string/get_verification_code"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/etAuthCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etAuthCode"
        app:layout_constraintTop_toTopOf="@id/etAuthCode" />


    <TextView
        android:id="@+id/tvNextStep"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="27.5dp"
        android:layout_marginTop="46.5dp"
        android:background="@drawable/bg_r6"
        android:backgroundTint="@color/RFF"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/etAuthCode" />
</androidx.constraintlayout.widget.ConstraintLayout>