<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.xdys.library.widget.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:left_drawable="@mipmap/arrow_left_b"
        app:show_left="true"
        app:title_content="@string/account_logout"
        tools:layout_height="48dp" />

    <TextView
        android:id="@+id/tvGiveUp"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/give_up"
        android:textColor="@color/B33"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvConfirmLogout"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvConfirmLogout"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@color/RFF"
        android:gravity="center"
        android:text="@string/confirm_logout"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvGiveUp" />
</androidx.constraintlayout.widget.ConstraintLayout>