<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.xdys.library.widget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_drawable="@mipmap/arrow_left_b"
        app:right_content="@string/register"
        app:right_text_color="@color/B66"
        app:right_text_size="16sp"
        app:show_left="true"
        app:show_right="true"
        tools:heighe="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/account_password_login"
        android:textColor="@color/B00"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvProtocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/B80"
        android:textSize="12sp"
        tools:text="登录即代表你已同意" />

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:background="@color/BF7"
        android:gravity="center_vertical"
        android:hint="@string/hint_mobile"
        android:inputType="number"
        android:maxLength="11"
        android:paddingHorizontal="12dp"
        android:singleLine="true"
        android:textColor="@color/BBE"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/BF7"
        android:gravity="center_vertical"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLength="11"
        android:paddingHorizontal="12dp"
        android:singleLine="true"
        android:textColor="@color/BBE"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_r10"
        android:backgroundTint="@color/RFF"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvRetrievePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_password"
            android:textColor="@color/B66"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/tvMobileVerificationLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/mobile_verification_login"
            android:textColor="@color/RE3"
            android:textSize="15sp" />
    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvOtherLoginMethods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="@string/other_login_methods"
            android:textColor="@color/B99"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="44dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="4dp"
            android:background="@color/BCC"
            app:layout_constraintBottom_toBottomOf="@id/tvOtherLoginMethods"
            app:layout_constraintStart_toEndOf="@id/tvOtherLoginMethods"
            app:layout_constraintTop_toTopOf="@id/tvOtherLoginMethods" />

        <View
            android:layout_width="44dp"
            android:layout_height="0.5dp"
            android:layout_marginEnd="4dp"
            android:background="@color/BCC"
            app:layout_constraintBottom_toBottomOf="@id/tvOtherLoginMethods"
            app:layout_constraintEnd_toStartOf="@id/tvOtherLoginMethods"
            app:layout_constraintTop_toTopOf="@id/tvOtherLoginMethods" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivLoginWx"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/login_wx" />

        <ImageView
            android:id="@+id/ivLoginQQ"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="26dp"
            android:src="@mipmap/login_qq" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>