<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.xdys.library.widget.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:left_drawable="@mipmap/arrow_left_b"
        app:show_left="true"
        app:show_right="true"
        app:title_content="@string/change_login_psw"
        tools:layout_height="48dp" />

    <TextView
        android:id="@+id/tvTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28.5dp"
        android:text="@string/set_new_login_password"
        android:textColor="@color/B00"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBar" />

    <EditText
        android:id="@+id/etPsw"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/hint_auth_code"
        android:inputType="textPassword"
        android:paddingHorizontal="13dp"
        android:textColor="@color/BCC"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvTips" />

    <ImageView
        android:id="@+id/ivHidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:src="@mipmap/hidden_psw"
        app:layout_constraintBottom_toBottomOf="@id/etPsw"
        app:layout_constraintEnd_toEndOf="@id/etPsw"
        app:layout_constraintTop_toTopOf="@id/etPsw" />


    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/bg_r10"
        android:backgroundTint="@color/RFF"
        android:gravity="center"
        android:text="@string/determine"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/etPsw" />
</androidx.constraintlayout.widget.ConstraintLayout>