<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.xdys.library.widget.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:left_drawable="@mipmap/arrow_left_b"
        app:show_left="true"
        app:show_right="true"
        app:title_content="@string/payment_password"
        tools:layout_height="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="43dp"
        android:text="@string/please_set_six_pay_psw"
        android:textColor="@color/B66"
        android:textSize="16sp" />

    <com.king.view.splitedittext.SplitEditText
        android:id="@+id/splitEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="45dp"
        android:inputType="numberPassword"
        app:setBorderColor="@color/BL08"
        app:setBorderSpacing="0dp"
        app:setTextStyle="cipher_text"
        app:setCipherMask="*"
        app:setStrokeWidth="0.5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12.5dp"
        android:layout_marginTop="15.5dp"
        android:lineSpacingExtra="5.5dp"
        android:text="@string/hint_input_psw"
        android:textColor="@color/BCC"
        android:textSize="11sp" />

</androidx.appcompat.widget.LinearLayoutCompat>